--- a/guia semana 16/Views/Shared/_Layout.cshtml
+++ b/guia semana 16/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shadows" asp-action="Index2">Shadows</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Movies" asp-action="Index">Movies</a>
+                        </li>
                     </ul>
                 </div>
             </div>
